test/bad/arr_other_field.lat
int main() {
    int[] a = new int[1];
    a.b;
}
